--- a/covid_big5/Covid_BIG5.qmd
+++ b/covid_big5/Covid_BIG5.qmd
@@ -88,6 +88,8 @@ head(big5[,1:10])
 
 ## Reverse coding
 
+Recoding the variables that were answered in the opposite form
+
 ```{r}
 positively_keyed <- c('EXT1', 'EXT3', 'EXT5', 'EXT7', 'EXT9', 'EST1', 'EST3', 'EST5', 'EST6', 'EST7', 'EST8', 'EST9', 'EST10', 'AGR2', 'AGR4', 'AGR6', 'AGR8', 'AGR9', 'AGR10', 'CSN1', 'CSN3', 'CSN5', 'CSN7', 'CSN9', 'CSN10', 'OPN1', 'OPN3', 'OPN5', 'OPN7', 'OPN8', 'OPN9', 'OPN10')
 
@@ -165,6 +167,8 @@ covid19_for_plots <- covid19 %>%
   right_join(covid19, by = c("Country", "country_code")) %>%
   filter(Date == two_weeks_after_50_case) # Leaving only cases at 14 days after the first 50 cases
 ```
+
+# plotting the number of confirmed cases a 14 days after first 50 cases, by avrage score on the big five diffrent factors.
 
 ## Cases at 14 days after the first 50 cases, by Extraversion
 ### Linear model
@@ -300,6 +304,7 @@ ggplot(covid19_for_plots, aes(x = opn, y = ConfirmedCases)) +
 ```
 
 # Filtering out China
+filtering out China because is an outlier, where the outbreak started.
 ```{r}
 covid19_for_plots_no_china <- covid19_for_plots %>%
   filter(Country != "China")
